# COSC-Game-Jam-2023

./: .gitignore  .gitmodules  CMakeLists.txt  build_emscript.sh
include/: window.h
include/image/: image.h  stb_image.h
src/: main.cpp  window.cpp
src/image/: image.cpp
